--- a/src/components/nav/Nav.module.css
+++ b/src/components/nav/Nav.module.css
@@ -8,12 +8,12 @@
   }
 
   .homeLink {
-    display: flex;
-    align-items: center;
     border-right: 1px solid #ccc; 
+    margin-right: 10px;
     padding-right: 20px;
-    margin-right: 20px;
-    font-size: 25px;
+    font-size: 30px;
+    position: relative;
+    top: 5px;
   }
 
   .wrapper {
@@ -40,7 +40,7 @@
     align-items: center;
   }
 
-  .favouritesText {
+  .text {
     font-size: 30px;
     margin-right: 10px;
     margin: 0;
