--- a/src/components/pokedex/Pokedex.module.css
+++ b/src/components/pokedex/Pokedex.module.css
@@ -11,8 +11,8 @@
     background: white; 
     justify-content: center;
     border-radius: 8px;
-    margin-bottom: 20px;
-    margin-top: 20px;
+    margin: 20px 0;
+    padding: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
 
     @media (max-width: 768px) {
