final minor fixes: remove refetch, add another link

--- a/src/App.css
+++ b/src/App.css
@@ -32,5 +32,11 @@ body {
   .container{
     width: 1170px;
   }
+
+  @media (min-width: 1500px) {
+    .container{
+      width: 1480px;
+    }
+  }
 }
 
